[package]
name = "fenix_profile"
version = "0.1.0"
authors = ["Grisha Kruglov <gkruglov@mozilla.com>"]

[dependencies]
failure = "0.1.1"
libc = "0.2.41"
time = "0.1.38"

[dependencies.mentat]
# path = "/Users/emilytoop/Development/mentat"
git = "https://github.com/mozilla/mentat.git"
branch = "master"

[dependencies.mentat_ffi]
# path = "/Users/emilytoop/Development/mentat/ffi"
git = "https://github.com/mozilla/mentat.git"
branch = "master"
